Colab을 통해 생성됨

--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -36,8 +36,7 @@
         "import torch"
       ],
       "metadata": {
-        "id": "VoBSGegKg_Lz",
-        "cellView": "form"
+        "id": "VoBSGegKg_Lz"
       },
       "execution_count": null,
       "outputs": []
@@ -46,7 +45,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "6Q3_F6_hbkUp"
       },
       "outputs": [],
@@ -150,7 +148,7 @@
         "# Thresholds file will be saved in the same directory as the output Excel file\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligands = '2His_1Glu'  # @param [\"3His\", \"2His_1Asp\", \"2His_1Glu\", \"2His_1Cys_only_for_copper\"]\n",
+        "Ligands = '2His_1Glu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "Threshold = '3'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligands}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(output_directory, f\"thresholds_{Metal}_{Ligands}_R{Threshold}.xlsx\")\n",
@@ -474,13 +472,12 @@
       ],
       "metadata": {
         "id": "HGRkfIJd_lC8",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "outputId": "86502d2a-ac0e-4ca7-b4da-87d53f18c14f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +885,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1477,7 +1474,7 @@
         },
         "outputId": "755b5fd8-a96a-47d8-dc44-ef16bc851938"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
