--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -148,7 +148,7 @@
         "# Thresholds file will be saved in the same directory as the output Excel file\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligands = '2His_1Glu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
+        "Ligands = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "Threshold = '3'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligands}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(output_directory, f\"thresholds_{Metal}_{Ligands}_R{Threshold}.xlsx\")\n",
