Colab을 통해 생성됨

--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -472,6 +472,7 @@
       ],
       "metadata": {
         "id": "HGRkfIJd_lC8",
+        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -879,57 +880,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "8AQOHud9GN5_",
-        "outputId": "1510b492-f704-47e7-90ea-d86a166bebd2",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "8AQOHud9GN5_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "➡️ Output directory: /content\n",
-            "➡️ Output Excel file with coordinates will be saved as: /content/OmpF_dimer_alanine_132_2His_1Glu_4.xlsx\n",
-            "⚠️ Filtering by residue number '132'.\n",
-            "⬇️ Downloading threshold set '2His_1Glu' for 'Zn' (Threshold 4) from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Zn/2His_1Glu/4.xlsx\n",
-            "⚠️ NOTE: These thresholds will be applied to any found triad (regardless of residue type).\n",
-            "✅ Thresholds downloaded successfully to /content/thresholds_Zn_2His_1Glu_R4.xlsx\n",
-            "⚙️ Loading thresholds...\n",
-            "📊 Thresholds loaded:\n",
-            "    - alpha_distance_range: Min=4.0, Max=11.0\n",
-            "    - beta_distance_range: Min=4.0, Max=9.5\n",
-            "    - ratio_threshold_range: Min=0.7, Max=1.4\n",
-            "    - pie_threshold_range: Min=0.0, Max=25.0\n",
-            "\n",
-            "--- Starting Single File Prescreening & Coordinate Extraction ---\n",
-            "Current Time: 2025-05-02 18:59:37 KST+0900\n",
-            "Input PDB File: /content/OmpF_dimer_alanine.pdb\n",
-            "Specific Number Filter: 132\n",
-            "Threshold Set Used: Zn / 2His_1Glu / Range 4\n",
-            "Outputting results to file: /content/OmpF_dimer_alanine_132_2His_1Glu_4.xlsx\n",
-            "Redundancy Removal: ON\n",
-            "🔄 Processing: OmpF_dimer_alanine.pdb (Number Filter: 132, Redundancy Removal: ON)\n",
-            "    Found 680 standard residues.\n",
-            "    Generated 67600 unique potential spatial triads.\n",
-            "    Mapped 67600 spatial triads.\n",
-            "    🔍 Filtering by specific residue number: 132\n",
-            "    ✅ 675 triads matched the specific residue number.\n",
-            "    Proceeding to detailed geometric checks for 675 triads.\n",
-            "    Found 80 triads passing initial distance filters.\n",
-            "    Found 77 triads passing ratio filter.\n",
-            "    Found 71 triads passing pie angle filter.\n",
-            "    Extracting CA and CB coordinates for 71 final triads...\n",
-            "    Coordinate extraction complete.\n",
-            "    Saving final results with coordinates...\n",
-            "✅ Finished: OmpF_dimer_alanine.pdb. Results with coordinates saved to /content/OmpF_dimer_alanine_132_2His_1Glu_4.xlsx (Unique triads found after filters & dedupe: 71)\n",
-            "\n",
-            "🎉 Processing finished.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -982,7 +936,7 @@
         "# Using the parameters from your previous examples (adjust if needed)\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability/\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Combinations = '2His_1Glu'  # @param [\"3His\", \"2His_1Asp\", \"2His_1Glu\", \"2His_1Cys_only_for_copper\"]\n",
+        "Combinations = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_copper\"]\n",
         "map_url = f\"{base_url}/{Metal}/{Combinations}/map.xlsx\"\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Combinations}/threshold.xlsx\"\n",
         "\n",
@@ -1467,7 +1421,6 @@
         "    print(f\"  Total execution time: {end_time - start_time:.2f} seconds\")\n"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "HeWtnAWr9Vr_",
         "colab": {
           "base_uri": "https://localhost:8080/"
