Colab을 통해 생성됨

--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -36,15 +36,30 @@
         "import torch"
       ],
       "metadata": {
-        "id": "VoBSGegKg_Lz"
+        "id": "VoBSGegKg_Lz",
+        "cellView": "form",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f3df90e5-d9cf-4822-c705-cb23506b953b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n",
+            "Executing transaction: - \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\b/ \b\b- \b\b\\ \b\b| \b\bdone\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "6Q3_F6_hbkUp"
       },
       "outputs": [],
@@ -60,7 +75,7 @@
         "pdb_file_path = \"/content/8hxe.pdb\"  #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ### Enter the path to your output PDB file:\n",
-        "Output_file_path = \"/content/3iq6_alanine.pdb\"  #@param {type:\"string\"}\n",
+        "Output_file_path = \"/content/8hxe_alanine.pdb\"  #@param {type:\"string\"}\n",
         "\n",
         "# Create an instance of the PyMOL session\n",
         "with pymol2.PyMOL() as pymol:\n",
@@ -116,7 +131,7 @@
         "\n",
         "# --- Configuration ---\n",
         "# Specify the SINGLE PDB file path\n",
-        "Target_pdb_file = \"/content/OmpF_dimer_alanine.pdb\" # @param {type:\"string\"}\n",
+        "Target_pdb_file = \"/content/8hxe_alanine.pdb\" # @param {type:\"string\"}\n",
         "\n",
         "# Specify Specific Residue Number\n",
         "# @markdown ### Find triad containing at least one following residue number.\n",
@@ -127,7 +142,7 @@
         "Starting_residue_number = 100  # @param {type:\"integer\"} #starting residue\n",
         "Last_residue_number = 180    # @param {type:\"integer\"} #last residue number\n",
         "# --- Specify Exact Output Excel File Path ---\n",
-        "Output_excel_file_path_result1 = \"/content/OmpF_dimer_alanine_132_2His_1Glu_3.xlsx\"# @param {type:\"string\"}\n",
+        "Output_excel_file_path_result1 = \"/content/8hxe_alanine_3His_2.xlsx\"# @param {type:\"string\"}\n",
         "\n",
         "# --- Determine Output Directory from Output File Path ---\n",
         "output_directory = os.path.dirname(Output_excel_file_path_result1)\n",
@@ -148,8 +163,8 @@
         "# Thresholds file will be saved in the same directory as the output Excel file\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligands = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
-        "Threshold = '3'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
+        "Ligands = '2His_1Glu_only_for_Zn_Mn_Fe'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
+        "Threshold = '2'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligands}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(output_directory, f\"thresholds_{Metal}_{Ligands}_R{Threshold}.xlsx\")\n",
         "\n",
@@ -471,60 +486,10 @@
         "    print(\"\\n🎉 Processing finished.\")"
       ],
       "metadata": {
-        "id": "HGRkfIJd_lC8",
-        "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "86502d2a-ac0e-4ca7-b4da-87d53f18c14f"
+        "id": "HGRkfIJd_lC8"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "➡️ Output directory: /content\n",
-            "➡️ Output Excel file with coordinates will be saved as: /content/OmpF_dimer_alanine_132_2His_1Glu_3.xlsx\n",
-            "⚠️ Filtering by residue number '132'.\n",
-            "⬇️ Downloading threshold set '2His_1Glu' for 'Zn' (Threshold 3) from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Zn/2His_1Glu/3.xlsx\n",
-            "⚠️ NOTE: These thresholds will be applied to any found triad (regardless of residue type).\n",
-            "✅ Thresholds downloaded successfully to /content/thresholds_Zn_2His_1Glu_R3.xlsx\n",
-            "⚙️ Loading thresholds...\n",
-            "📊 Thresholds loaded:\n",
-            "    - alpha_distance_range: Min=5.0, Max=10.7\n",
-            "    - beta_distance_range: Min=4.0, Max=9.5\n",
-            "    - ratio_threshold_range: Min=0.7, Max=1.4\n",
-            "    - pie_threshold_range: Min=0.0, Max=20.0\n",
-            "\n",
-            "--- Starting Single File Prescreening & Coordinate Extraction ---\n",
-            "Current Time: 2025-05-02 18:57:19 KST+0900\n",
-            "Input PDB File: /content/OmpF_dimer_alanine.pdb\n",
-            "Specific Number Filter: 132\n",
-            "Threshold Set Used: Zn / 2His_1Glu / Range 3\n",
-            "Outputting results to file: /content/OmpF_dimer_alanine_132_2His_1Glu_3.xlsx\n",
-            "Redundancy Removal: ON\n",
-            "🔄 Processing: OmpF_dimer_alanine.pdb (Number Filter: 132, Redundancy Removal: ON)\n",
-            "    Found 680 standard residues.\n",
-            "    Generated 59048 unique potential spatial triads.\n",
-            "    Mapped 59048 spatial triads.\n",
-            "    🔍 Filtering by specific residue number: 132\n",
-            "    ✅ 606 triads matched the specific residue number.\n",
-            "    Proceeding to detailed geometric checks for 606 triads.\n",
-            "    Found 65 triads passing initial distance filters.\n",
-            "    Found 64 triads passing ratio filter.\n",
-            "    Found 52 triads passing pie angle filter.\n",
-            "    Extracting CA and CB coordinates for 52 final triads...\n",
-            "    Coordinate extraction complete.\n",
-            "    Applying deduplication based on residue number combinations...\n",
-            "      DataFrame reduced to 31 rows after deduplication.\n",
-            "    Saving final results with coordinates...\n",
-            "✅ Finished: OmpF_dimer_alanine.pdb. Results with coordinates saved to /content/OmpF_dimer_alanine_132_2His_1Glu_3.xlsx (Unique triads found after filters & dedupe: 31)\n",
-            "\n",
-            "🎉 Processing finished.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -579,7 +544,7 @@
         "# Thresholds file will be saved in the same directory as the output Excel file\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligands = '2His_1Glu'  # @param [\"3His\", \"2His_1Asp\", \"2His_1Glu\", \"2His_1Cys_only_for_copper\"]\n",
+        "Ligands = \"3His_only_for_Zn_Cu\"  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "Threshold = '4'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligands}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(output_directory, f\"thresholds_{Metal}_{Ligands}_R{Threshold}.xlsx\")\n",
@@ -936,7 +901,7 @@
         "# Using the parameters from your previous examples (adjust if needed)\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability/\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Combinations = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_copper\"]\n",
+        "Combinations = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "map_url = f\"{base_url}/{Metal}/{Combinations}/map.xlsx\"\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Combinations}/threshold.xlsx\"\n",
         "\n",
@@ -1421,58 +1386,11 @@
         "    print(f\"  Total execution time: {end_time - start_time:.2f} seconds\")\n"
       ],
       "metadata": {
-        "id": "HeWtnAWr9Vr_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "755b5fd8-a96a-47d8-dc44-ef16bc851938"
+        "cellView": "form",
+        "id": "HeWtnAWr9Vr_"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "➡️ Output directory: /content\n",
-            "Downloading probability map from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability//Zn/2His_1Glu/map.xlsx\n",
-            "Downloaded map data to /content/map.xlsx\n",
-            "Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability//Zn/2His_1Glu/threshold.xlsx\n",
-            "Downloaded thresholds data to /content/threshold.xlsx\n",
-            "\n",
-            "--- Loading Shared Data ---\n",
-            "Loading PDB structure: OmpF_dimer_alanine...\n",
-            "Loaded structure.\n",
-            "Loading thresholds...\n",
-            "Thresholds loaded.\n",
-            "Loading probability map...\n",
-            "Processing probability map...\n",
-            "Probability map processed into 3D array.\n",
-            "Loading input coordinate data from: /content/OmpF_dimer_alanine_132_2His_1Glu_4.xlsx...\n",
-            "Loaded 71 candidate sites.\n",
-            "\n",
-            "--- Starting Main Process for Single PDB Site Parallelization ---\n",
-            "Current Time (KST): 2025-05-02 18:59:50 KST+0900\n",
-            "Prepared 71 tasks for parallel processing.\n",
-            "\n",
-            "Initializing multiprocessing pool with 8 workers...\n",
-            "Starting parallel processing of sites...\n",
-            "  Processed 50/71 sites...\n",
-            "  Processed 71/71 sites...\n",
-            "Finished processing all 71 assigned tasks.\n",
-            "\n",
-            "--- Multiprocessing Pool Finished ---\n",
-            "Filtering results (Zn_Score > 0)...\n",
-            "Saving 14 site(s) with positive scores...\n",
-            "✅ Successfully saved results to: /content/OmpF_dimer_alanine_132_2His_1Glu_4_result.xlsx\n",
-            "\n",
-            "🏁 Processing summary:\n",
-            "  Total input sites: 71\n",
-            "  Total sites processed by pool: 71\n",
-            "  Total result sites saved (Score > 0): 14\n",
-            "  Total execution time: 95.24 seconds\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
