Colab을 통해 생성됨

--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -486,7 +486,8 @@
         "    print(\"\\n🎉 Processing finished.\")"
       ],
       "metadata": {
-        "id": "HGRkfIJd_lC8"
+        "id": "HGRkfIJd_lC8",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -873,8 +874,8 @@
         "\n",
         "# --- Configuration and Setup ---\n",
         "# Define paths for the SINGLE input coordinate Excel file and the corresponding PDB file\n",
-        "Input_result1_excel_file = '/content/OmpF_dimer_alanine_132_2His_1Glu_4.xlsx' # @param {type:\"string\"}\n",
-        "Input_pdb_file = '/content/OmpF_dimer_alanine.pdb' # @param {type:\"string\"}\n",
+        "Input_result1_excel_file = '/content/8hxe_alanine_3His_2.xlsx' # @param {type:\"string\"}\n",
+        "Input_pdb_file = '/content/8hxe_alanine.pdb' # @param {type:\"string\"}\n",
         "Output_result2_excel_file = '/content/OmpF_dimer_alanine_132_2His_1Glu_4_result.xlsx' # @param {type:\"string\"}\n",
         "# Create output directory if it doesn't exist\n",
         "output_result_directory = os.path.dirname(Output_result2_excel_file)\n",
@@ -900,8 +901,8 @@
         "# --- Download Data from GitHub ---\n",
         "# Using the parameters from your previous examples (adjust if needed)\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability/\"\n",
-        "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Combinations = '3His_only_for_Zn_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
+        "Metal = 'Cu'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
+        "Combinations = '2His_1Cys_only_for_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "map_url = f\"{base_url}/{Metal}/{Combinations}/map.xlsx\"\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Combinations}/threshold.xlsx\"\n",
         "\n",
