Colab을 통해 생성됨

--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -2,28 +2,28 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "bf812d31c28d4911bb42d06c9551c7aa",
-            "32e5668a3ab64fd3bc3b8cdea4782261",
-            "2f4c362c1c1c4407bf2e7ac561519c5c",
-            "4962d2f0ac5e4e06b7b085b8a1dd979f",
-            "d544912c3f524070b72bba916140da7e",
-            "62ca8aaf2d6745b68ea0d991a5ef171d",
-            "bfed9c2cbe06418989f5734e001d56ea",
-            "9de717b7453c47b7a950cc146d87f8f7",
-            "3d491291e53042389048263efb0825e5",
-            "5015cc04da0a4b8a8f1ba2be245d3a6f",
-            "bf8f7f5ed0724a44bf54d75ef5e3d47e"
+            "37c282bf4a4740579b07503590c9a19a",
+            "c74fc008bc4d4acc9d3f57ba3459451c",
+            "abd78f8d8d3545c58e2bcea310455131",
+            "38375d738a954f609c32c717562e0987",
+            "aa07417c7ca4425792ce1c17d60b7cb6",
+            "6e5ddf63d05b4e789551822d299c51b8",
+            "76fe7883f0024891b34a0e797c0ebd7f",
+            "97f265d8974f4134b6a7f5ec90f91179",
+            "99de5afca47f44ffb148d54e4428a950",
+            "21686edae9af4a6e94989c80148bdc32",
+            "fa80b30fb02c44a69b55a1ad032f0418"
           ]
         },
         "id": "1SWSTdXwsn5q",
-        "outputId": "c685fc7b-a326-4809-9f19-6c980cba0d0c"
+        "outputId": "43e4c6fc-4919-46f2-dae8-1ff036af73da"
       },
       "outputs": [
         {
@@ -35,7 +35,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "bf812d31c28d4911bb42d06c9551c7aa"
+              "model_id": "37c282bf4a4740579b07503590c9a19a"
             }
           },
           "metadata": {}
@@ -117,19 +117,58 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "nuukHJoFHl4G"
+        "id": "nuukHJoFHl4G",
+        "outputId": "abbf3ac7-0059-4d2b-f1b8-fada2dafc6f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Processed: 8hxe.pdb\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "lPrIazJuxjnp",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "4cbadb99-5153-473d-dc82-52ac4c9f5cfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/5.xlsx\n",
+            "✅ Thresholds downloaded successfully to /content/thresholds.xlsx\n",
+            "⚙️ Loading thresholds...\n",
+            "📊 Thresholds loaded:\n",
+            "  - alpha_distance_range: Min=5.1, Max=10.1\n",
+            "  - beta_distance_range: Min=3.8, Max=8.9\n",
+            "  - ratio_threshold_range: Min=0.9, Max=1.6\n",
+            "  - pie_threshold_range: Min=0.0, Max=25.0\n",
+            "\n",
+            "--- Starting Batch Processing with KDTree Pre-filtering ---\n",
+            "Found 1 PDB files in /content/cleaned\n",
+            "🚀 Starting parallel processing with 6 workers...\n",
+            "🔄 Processing: 8hxe.pdb\n",
+            "✅ Finished: 8hxe.pdb (Saved: 4 triads)\n",
+            "\n",
+            "🎉 All processing finished.\n"
+          ]
+        }
+      ],
       "source": [
         "# @markdown # Step 3A: Filter using geometric parameters (Containing all metal ligating residue)\n",
         "\n",
@@ -157,7 +196,7 @@
         "# --- Download threshold configuration ---\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Cu'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligand = '2His_1Cys_only_for_copper'  # @param [\"3His\", \"2His_1Asp\", \"2His_1Glu\", \"2His_1Cys_only_for_copper\"]\n",
+        "Ligand = '2His_1Cys_only_for_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "Threshold = '5'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligand}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(Result1_excel_directory, \"thresholds.xlsx\")\n",
@@ -501,7 +540,7 @@
         "# Using the parameters from your last provided code\n",
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/probability/\"\n",
         "Metal = 'Zn'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
-        "Ligand = '2His_1Asp'  # @param [\"3His\", \"2His_1Asp\", \"2His_1Glu\", \"2His_1Cys_only_for_copper\", \"\"]\n",
+        "Ligand = '2His_1Glu_only_for_Zn_Mn_Fe'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
         "map_url = f\"{base_url}/{Metal}/{Ligand }/map.xlsx\"\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligand }/threshold.xlsx\"\n",
         "\n",
@@ -1044,7 +1083,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "bf812d31c28d4911bb42d06c9551c7aa": {
+        "37c282bf4a4740579b07503590c9a19a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -1059,14 +1098,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_32e5668a3ab64fd3bc3b8cdea4782261",
-              "IPY_MODEL_2f4c362c1c1c4407bf2e7ac561519c5c",
-              "IPY_MODEL_4962d2f0ac5e4e06b7b085b8a1dd979f"
+              "IPY_MODEL_c74fc008bc4d4acc9d3f57ba3459451c",
+              "IPY_MODEL_abd78f8d8d3545c58e2bcea310455131",
+              "IPY_MODEL_38375d738a954f609c32c717562e0987"
             ],
-            "layout": "IPY_MODEL_d544912c3f524070b72bba916140da7e"
+            "layout": "IPY_MODEL_aa07417c7ca4425792ce1c17d60b7cb6"
           }
         },
-        "32e5668a3ab64fd3bc3b8cdea4782261": {
+        "c74fc008bc4d4acc9d3f57ba3459451c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1081,13 +1120,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_62ca8aaf2d6745b68ea0d991a5ef171d",
+            "layout": "IPY_MODEL_6e5ddf63d05b4e789551822d299c51b8",
             "placeholder": "​",
-            "style": "IPY_MODEL_bfed9c2cbe06418989f5734e001d56ea",
+            "style": "IPY_MODEL_76fe7883f0024891b34a0e797c0ebd7f",
             "value": ""
           }
         },
-        "2f4c362c1c1c4407bf2e7ac561519c5c": {
+        "abd78f8d8d3545c58e2bcea310455131": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -1103,15 +1142,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_9de717b7453c47b7a950cc146d87f8f7",
+            "layout": "IPY_MODEL_97f265d8974f4134b6a7f5ec90f91179",
             "max": 100,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_3d491291e53042389048263efb0825e5",
+            "style": "IPY_MODEL_99de5afca47f44ffb148d54e4428a950",
             "value": 100
           }
         },
-        "4962d2f0ac5e4e06b7b085b8a1dd979f": {
+        "38375d738a954f609c32c717562e0987": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1126,13 +1165,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_5015cc04da0a4b8a8f1ba2be245d3a6f",
+            "layout": "IPY_MODEL_21686edae9af4a6e94989c80148bdc32",
             "placeholder": "​",
-            "style": "IPY_MODEL_bf8f7f5ed0724a44bf54d75ef5e3d47e",
-            "value": " 120/? [00:48&lt;00:00,  2.55it/s]"
+            "style": "IPY_MODEL_fa80b30fb02c44a69b55a1ad032f0418",
+            "value": " 120/? [00:51&lt;00:00,  2.43it/s]"
           }
         },
-        "d544912c3f524070b72bba916140da7e": {
+        "aa07417c7ca4425792ce1c17d60b7cb6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1184,7 +1223,7 @@
             "width": null
           }
         },
-        "62ca8aaf2d6745b68ea0d991a5ef171d": {
+        "6e5ddf63d05b4e789551822d299c51b8": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1236,7 +1275,7 @@
             "width": null
           }
         },
-        "bfed9c2cbe06418989f5734e001d56ea": {
+        "76fe7883f0024891b34a0e797c0ebd7f": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1251,7 +1290,7 @@
             "description_width": ""
           }
         },
-        "9de717b7453c47b7a950cc146d87f8f7": {
+        "97f265d8974f4134b6a7f5ec90f91179": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1303,7 +1342,7 @@
             "width": null
           }
         },
-        "3d491291e53042389048263efb0825e5": {
+        "99de5afca47f44ffb148d54e4428a950": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -1319,7 +1358,7 @@
             "description_width": ""
           }
         },
-        "5015cc04da0a4b8a8f1ba2be245d3a6f": {
+        "21686edae9af4a6e94989c80148bdc32": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1371,7 +1410,7 @@
             "width": null
           }
         },
-        "bf8f7f5ed0724a44bf54d75ef5e3d47e": {
+        "fa80b30fb02c44a69b55a1ad032f0418": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
