Colab을 통해 생성됨

--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -118,10 +118,10 @@
       "metadata": {
         "cellView": "form",
         "id": "nuukHJoFHl4G",
-        "outputId": "abbf3ac7-0059-4d2b-f1b8-fada2dafc6f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "abbf3ac7-0059-4d2b-f1b8-fada2dafc6f8"
       },
       "execution_count": 1,
       "outputs": [
@@ -136,39 +136,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "lPrIazJuxjnp",
-        "cellView": "form",
-        "outputId": "4cbadb99-5153-473d-dc82-52ac4c9f5cfc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "cellView": "form"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/5.xlsx\n",
-            "✅ Thresholds downloaded successfully to /content/thresholds.xlsx\n",
-            "⚙️ Loading thresholds...\n",
-            "📊 Thresholds loaded:\n",
-            "  - alpha_distance_range: Min=5.1, Max=10.1\n",
-            "  - beta_distance_range: Min=3.8, Max=8.9\n",
-            "  - ratio_threshold_range: Min=0.9, Max=1.6\n",
-            "  - pie_threshold_range: Min=0.0, Max=25.0\n",
-            "\n",
-            "--- Starting Batch Processing with KDTree Pre-filtering ---\n",
-            "Found 1 PDB files in /content/cleaned\n",
-            "🚀 Starting parallel processing with 6 workers...\n",
-            "🔄 Processing: 8hxe.pdb\n",
-            "✅ Finished: 8hxe.pdb (Saved: 4 triads)\n",
-            "\n",
-            "🎉 All processing finished.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @markdown # Step 3A: Filter using geometric parameters (Containing all metal ligating residue)\n",
         "\n",
