--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -19,6 +19,7 @@
       "cell_type": "code",
       "source": [
         "# @markdown # Step 1: Install all neccessary packages\n",
+        "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n", 
         "# Install all necessary packages\n",
         "!pip install biopython\n",
         "!pip install --upgrade tqdm\n",
