--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -43,6 +43,7 @@
       ],
       "source": [
         "# @markdown # Step 1: Install all neccessary packages\n",
+        "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
         "#Download pymol in colabsystem\n",
         "from IPython.utils import io\n",
         "import tqdm.notebook\n",
